# Inventory-database-development

./: Makefile  pyproject.toml  pytest.ini
eccomerce/: settings.py
eccomerce/dashboard/test/: test_selenium_dashboard.py
eccomerce/tests/: selenium.py
