[tool.poetry]
name = "e-commerce"
version = "0.1.0"
description = "E-commerce API with Django Rest Framework"
authors = ["SahilMehdiyev <branchsahil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.2"
pytest-django = "^4.9.0"
pytest-factoryboy = "^2.7.0"
pytest = "^8.3.3"
pendulum = "^3.0.0"
django = "^5.1.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
